# openmeteo-sample

./: .gitignore  README.md  pyproject.toml
src/openmeteo_sample/: __init__.py  main.py
